# dali-nrf54

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  env.sh  sysbuild.cmake  west.yml
.github/workflows/: ci.yml
cpuflpr/: CMakeLists.txt  Kconfig  Kconfig.flpr  prj.conf
cpuflpr/boards/: nrf54l15dk_nrf54l15_cpuflpr.overlay
cpuflpr/src/: dali_heartbeat.c  dali_ipc_server.c  dali_services_flpr.h  main.c
drivers/dali/: CMakeLists.txt  dali_ipc.c
include/dali/: dali_api.h  dali_ipc_protocol.h
samples/dali_controller/: CMakeLists.txt  prj.conf  sample.yaml  sysbuild.cmake
samples/dali_controller/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
samples/dali_controller/src/: cpuapp_heartbeat.c  cpuapp_heartbeat.h  main.c
samples/dali_controller/sysbuild/: cpuflpr.conf  cpuflpr.overlay  cpuflpr_debug.conf
scripts/: pre_review.sh
zephyr/: module.yml
